# kirikiri-speed-control

./: .gitignore  AGENTS.md  Agents.md  CHANGELOG.md  CMakeLists.txt  README.md  README_en.md  README_ja.md  README_zh-CN.md  agentlog.md  guide.md
cmake/: dual_arch.cmake
src/common/: AudioStreamProcessor.cpp  AudioStreamProcessor.h  DspPipeline.cpp  DspPipeline.h  EnvOverrides.cpp  EnvOverrides.h  Logging.cpp  SharedSettings.h  SharedStatus.h  UiText.cpp  UiText.h  process_blacklist.txt  ui_texts.yaml
src/core/: ControllerCore.cpp  ControllerCore.h  main.cpp  ui.cpp  ui.h
src/gui/: main.cpp  ui.cpp  ui.h
src/hook/: DirectSoundHook.cpp  DirectSoundHook.h  HookUtils.cpp  HookUtils.h  SharedSettingsManager.cpp  SharedSettingsManager.h  SharedStatusManager.cpp  SharedStatusManager.h  WasapiHook.cpp  WasapiHook.h  WaveOutHook.cpp  WaveOutHook.h  XAudio2Hook.cpp  XAudio2Hook.h  dllmain.cpp
tests/: dsp_smoke.cpp
